# FLURSYS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cases/backward-facing-step/: run.sh
cases/cylinder-re100/: run-quick.sh  run.sh
cases/lid-driven-cavity/: run.sh
examples/: cavity.flursys.json
scripts/: make-video.sh  release-version.sh
src/: field.rs  grid.rs  lib.rs  output.rs  preprocess.rs  project.rs  runtime.rs
src/cases/: backward_step.rs  cavity.rs  cylinder.rs  mod.rs
src/solver/: incompressible.rs  mod.rs
tests/: smoke.rs
