[package]
name = "flursys"
version = "0.1.1-alpha.2"
edition = "2021"
authors = ["A1i98 and contributors"]
description = "Rust-native scientific simulation system"
license = "MIT"
repository = "https://github.com/A1i98/flursys"
keywords = [
  "cfd",
  "finite-volume",
  "navier-stokes",
  "pde",
  "rust",
  "scientific-computing",
]
categories = ["science", "simulation"]
default-run = "flursys-gui"

[lib]
name = "flursys"
path = "src/lib.rs"

[[bin]]
name = "flursys"
path = "src/bin/flursys.rs"

[[bin]]
name = "flursys-gui"
path = "src/bin/flursys_gui.rs"
required-features = ["gui"]

[features]
default = ["gui"]
gui = ["dep:slint"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1"
slint = { version = "1.17", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
